color issue on ios

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -107,7 +107,7 @@ h3{
 }
 
 .bg-light{
-	background-color:rgb(17,120,100,1) !important;
+	background-color:rgba(17,120,100,1) !important;
 }
 
 .navbar{
